[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-cognitoidentityprovider = "1.61.0"
axum = "0.7.9"
axum-extra = {version = "0.9.6", features= ["typed-header"]}
axum-macros = "0.4.2"
axum-server = "0.7.1"
headers = "0.4.0"
hyper = { version = "1.5.2", feature = ["full"]}
serde = { version = "1.0.216", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.133"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
urlencoding = "2.1.3"
uuid = {version = "1.11.0", features = ["v4"]}
